--- a/aboutme-style.css
+++ b/aboutme-style.css
@@ -17,3 +17,37 @@ ul{
 li{
 	line-height: 25px;
 }
+h1{
+	color: #fff;
+}
+.main-page{
+	background-color: #333;
+}
+p, li{
+	color: #DAFFF8;
+}
+.images{
+	text-align: center;
+}
+.box:hover{
+	-webkit-transform: scale(1.1, 1.1);
+	-ms-transform: scale(1.1, 1.1);
+	-o-transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
+	position: relative;
+	z-index: 2;
+}
+.box{
+	display: inline-block;
+	box-shadow: 0 2px 10px #DAFFF8;
+	-webkit-transition: transform .25s ease;
+	-o-transition: transform .25s ease;
+	transition: transform .25s ease;
+	background-color: #333;
+	margin-right: 40px;
+}
+.box p{
+	font-size: 20px;
+
+	text-align: center;
+}
